<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>im1r_ros2_driver</name>
  <version>1.0.0</version>
  <description>ROS2 driver for daisch im1r sensor</description>

  <author>Jielei Han</author>
  <maintainer email="xiaorong.wang@daisch.com">Xiaorong Wang</maintainer>
  <maintainer email="bolong.chang@daisch.com">Bolong Chang</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
